err/delv.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Parsley-1.3.dist-info'...
Listing './lib/python3.5/site-packages/delv'...
Compiling './lib/python3.5/site-packages/delv/archive.py'...
***   File "./lib/python3.5/site-packages/delv/archive.py", line 127
    raise IndexError, "Bad seek to 0x%08X, size 0x%08X"%(
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/delv/ddasm.py'...
***   File "./lib/python3.5/site-packages/delv/ddasm.py", line 695
    print "Subroutine discovered at 0x%04X"%(subroutinefound)
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/delv/graphics.py'...
***   File "./lib/python3.5/site-packages/delv/graphics.py", line 123
    except IndexError,e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/delv/level.py'...
***   File "./lib/python3.5/site-packages/delv/level.py", line 91
    if v > 255: raise ValueError, "d1 is an 8-bit quantity"
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/delv/library.py'...
***   File "./lib/python3.5/site-packages/delv/library.py", line 150
    print "WARNING: Someone using %04X, and cache was purged."%(
                                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/delv/rdasm_include'...
Listing './lib/python3.5/site-packages/delv/rdasm_include/Delver'...
Compiling './lib/python3.5/site-packages/delv/script.py'...
***   File "./lib/python3.5/site-packages/delv/script.py", line 151
    lambda (n,a):self.str_disassemble_atom(0,a),
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/delv/sound.py'...
***   File "./lib/python3.5/site-packages/delv/sound.py", line 64
    if self.src.read(4) != 'asnd': raise SoundError, "Bad magic number"
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/delv/store.py'...
***   File "./lib/python3.5/site-packages/delv/store.py", line 58
    print dir(src), hasattr(src, 'resid')
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/delv/util.py'...
***   File "./lib/python3.5/site-packages/delv/util.py", line 81
    fieldbits = value & (0xFFFFFFFFFFFFFFFFL >> (64-size))
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/delv-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/ometa'...
Listing './lib/python3.5/site-packages/ometa/_generated'...
Listing './lib/python3.5/site-packages/ometa/test'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/terml'...
Listing './lib/python3.5/site-packages/terml/_generated'...
Listing './lib/python3.5/site-packages/terml/test'...
Listing './share'...
Listing './share/python-wheels'...
